--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_API_BASE_URL=https://chat-backend-7jiw.onrender.com
-VITE_WS_URL=https://chat-backend-7jiw.onrender.com/ws
+VITE_BACKEND_URL=https://chat-backend-7jiw.onrender.com
